fix: nav z-index

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -17,6 +17,7 @@
 .nav {
   width: 100%;
   padding: 1rem;
+  z-index: 9999;
 }
 
 .navList {
